--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express": "^4.16.4",
     "hammerjs": "^2.0.8",
     "mongoose": "^5.3.7",
+    "multer": "^1.4.1",
     "npm": "^6.4.1",
     "rxjs": "^6.3.3",
     "rxjs-compat": "^6.3.3",
