--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "@angular/platform-browser": "7.0.1",
     "@angular/platform-browser-dynamic": "7.0.1",
     "@angular/router": "7.0.1",
+    "bcrypt": "^3.0.2",
     "body-parser": "^1.18.3",
     "core-js": "^2.4.1",
     "express": "^4.16.4",
     "hammerjs": "^2.0.8",
     "mongoose": "^5.3.7",
+    "mongoose-unique-validator": "^2.0.2",
     "multer": "^1.4.1",
     "npm": "^6.4.1",
     "rxjs": "^6.3.3",
