--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "core-js": "^2.4.1",
     "express": "^4.16.4",
     "hammerjs": "^2.0.8",
+    "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.3.7",
     "mongoose-unique-validator": "^2.0.2",
     "multer": "^1.4.1",
